Resolved spacing issue in mobile GPS coordinates

--- a/web/frontend/styles/forms/standard.scss
+++ b/web/frontend/styles/forms/standard.scss
@@ -389,6 +389,9 @@ form.standard-form {
             >li {
                 width: 100%;
                 margin-right: 0;
+                &:not(:last-child) {
+                    margin-bottom: 0.5em;
+                }
             }
         }
     }
